# hvm-rollup

./: .gitignore  README.md
offchain-labs/: Cargo.toml  _dev.sh  package.json  zkservice.sh
offchain-labs/benches/: savvy_benchmarks.rs
offchain-labs/src/: config.rs  error.rs  lib.rs  main.rs
offchain-labs/src/bend/: mod.rs  storage.rs
offchain-labs/src/prover/: mod.rs
offchain-labs/src/prover/libs/: zk_snark.rs
offchain-labs/src/sequencer/: batch.rs  mod.rs  transaction.rs
offchain-labs/src/verifier/: mod.rs
offchain-labs/src/verifier/libs/: mod.rs  zk_snark.rs
offchain-labs/src/zk_rollup/: mod.rs  proof.rs  state.rs
offchain-labs/tests/: e2e_tests.rs  integration_tests.rs  prover_tests.rs  sequencer_tests.rs  verifier_tests.rs
relayer/: Cargo.toml  README.md
relayer/artifacts/: qf_metadata.scale
relayer/servers/: actix-server.rs  echo-server.rs  server.rs
relayer/src/: bend_program.rs  calldata.rs  commands.rs  connect.rs  error.rs  lib.rs  main.rs  offchain_lab.rs  relay.rs  runtime.rs  util.rs
relayer/tests/: commands_tests.rs
