[package]
name = "offchain_labs"
version = "0.1.0"
edition = "2021"
authors = ["MemechiKekamoto <memechi.kekamoto@pm.me>"]
homepage = "https://github.com/MemechiKekamoto/hvm-rollup"
repository = "https://github.com/MemechiKekamoto/hvm-rollup.git"
description = "HVM Infrastructure with ZK Rollup Technology"

[dependencies]
thiserror = "1.0.48"
log = "0.4.17"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
bellman = "0.14"
bls12_381 = "0.8"
rand = "0.8"
bincode = "1.3"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "savvy_benchmarks"
harness = false
