[package]
name = "offchain_labs"
version = "0.1.0"
edition = "2021"
authors = ["MemechiKekamoto <memechi.kekamoto@pm.me>"]
homepage = "https://github.com/MemechiKekamoto/hvm-rollup"
repository = "https://github.com/MemechiKekamoto/hvm-rollup.git"
description = "HVM Infrastructure with ZK Rollup Technology"

[dependencies]
thiserror = "1.0.48"
log = "0.4.17"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_bytes = "0.11"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
bincode = "1.3"
chrono = "0.4"
wasmer = { version = "3.3.0", features = ["sys"] }
merlin = "3.0"
rand = "0.8"
sha2 = "0.10"

ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-bn254 = "0.4.0"
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
ark-std = { version = "0.4.0", features = ["std"] }
ark-relations = "0.4.0"
ark-serialize = "0.4.0"
axum = "0.7.5"

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.35", features = ["full", "test-util"] }

[[bench]]
name = "savvy_benchmarks"
harness = false
