[package]
name = "hvm_relayer"
version = "0.1.0"
edition = "2021"
authors = ["MemechiKekamoto <memechi.kekamoto@pm.me>"]
homepage = "https://github.com/MemechiKekamoto/hvm-rollup"
repository = "https://github.com/MemechiKekamoto/hvm-rollup.git"
description = "A offchain relayer for fetching calldata from HVM2 infrastructure and relaying to QuantumFusion blockchain"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
subxt = "0.34.0"
subxt-macro = "0.34.0"
subxt-metadata = "0.34.0"
subxt-signer = "0.34.0"
sp-core = { version = "28.0.0", package = "sp-core" }
sp-runtime = { version = "31.0.0", package = "sp-runtime" }
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
warp = "0.3"
log = "0.4.17"
env_logger = "0.10"
url = "2.5.0"
hex = "0.4"
futures-util = "0.3.21"
thiserror = "1.0.48"
clap = { version = "4.3", features = ["derive"] }
schnorrkel = { version = "0.11.4", package = "schnorrkel" }
offchain_labs = { version = "0.1.0", path = "../offchain-labs" }

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.11.4"

[[bin]]
name = "hvm_relayer"
path = "src/main.rs"

[lib]
name = "hvm_relayer"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true